--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="header" class="section">
-            <img alt="logo" class="img-circle" src="https://avatars.githubusercontent.com/u/76828314?s=400&u=41b046107b9be55ddb52c8e6460cf4bd8bda09e5&v=4"> 
+            <img alt="logo" class="img-circle" src="https://telegra.ph/file/e7e66fe374528858e6db8.jpg"> 
             <p>SHRVAN</p>
         </div>
         <div class="section">
