--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                 <img src="https://img.icons8.com/nolan/144/github.png"/>
                 <div class="caption">Github Account</div>
             </a>
-            <a href="https://xhrvan.github.io/xhrvan">
+            <a href="https://xhrvan/shrvan.github.io">
                 <img src="https://img.icons8.com/dusk/144/000000/domain.png"/>
                 <div class="caption">My Website</div>
             </a>
             <br>
             <p align="centre"><strong>Resources I Use</strong></p>
-            <a href="https://github.com/">
+            <a href="https://github.com/xhrvan">
                 <img src="https://img.icons8.com/nolan/144/github.png"/>
                 <div class="caption">Github</div>
             </a>
-            <a href="https://telegram.me/">
+            <a href="https://telegram.me/xhrvan">
                 <img src="https://img.icons8.com/nolan/144/telegram-app.png"/>
                 <div class="caption">Telegram</div>
             </a>
