--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="https://img.icons8.com/nolan/144/github.png"/>
                 <div class="caption">Github Account</div>
             </a>
-            <a href="https://xhrvan/shrvan.github.io">
+            <a href="https://github.com/xhrvan/shrvan.github.io">
                 <img src="https://img.icons8.com/dusk/144/000000/domain.png"/>
                 <div class="caption">My Website</div>
             </a>
