--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="section">
             <h1><span>About Me</span></h1>
-            <p> Hey! I'm <strong>SHRVAN</strong> from <strong>Pune, India.</strong>. Currently studying <strong>9th Standard</strong>. I Like <strong>Python</strong> ❤️❤️</p>
+            <p> Hey! I'm <strong>SHRVAN</strong> from <strong>Pune, India.</strong>. Currently studying <strong>Never give up</strong>. I Like <strong>Python</strong> ❤️❤️</p>
             <p class="quote">~ SHRVAN</p>
         </div>
         <div class="section" id="res">
@@ -27,7 +27,7 @@
                 <img src="https://img.icons8.com/nolan/144/github.png"/>
                 <div class="caption">Github Account</div>
             </a>
-            <a href="https://github.com/xhrvan/shrvan.github.io">
+            <a href="https://github.com/xhrvan/xhrvan.github.io">
                 <img src="https://img.icons8.com/dusk/144/000000/domain.png"/>
                 <div class="caption">My Website</div>
             </a>
