--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="section">
             <h1><span>About Me</span></h1>
-            <p> Hey! I'm <strong>SHRVAN</strong> from <strong>Pune, India.</strong>. Currently studying <strong>Never give up</strong>. I Like <strong>Python</strong> ❤️❤️</p>
+            <p> Hey! I'm <strong>SHRVAN</strong> from <strong>Pune, India.</strong>. Currently studying.<strong>Never give up</strong>. I Like <strong>Python</strong> ❤️❤️</p>
             <p class="quote">~ SHRVAN</p>
         </div>
         <div class="section" id="res">
