--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="header" class="section">
-            <img alt="logo" class="img-circle" src="https://telegra.ph/file/5a13d397dbf092dc14a25.jpg"> 
+            <img alt="logo" class="img-circle" src="https://telegra.ph/file/db611ace8117073fa0cbe.jpg"> 
             <p>SHRVAN</p>
         </div>
         <div class="section">
@@ -37,7 +37,7 @@
                 <img src="https://img.icons8.com/nolan/144/github.png"/>
                 <div class="caption">Github</div>
             </a>
-            <a href="https://telegram.me/xhrvan">
+            <a href="https://telegram.me/xShrvan">
                 <img src="https://img.icons8.com/nolan/144/telegram-app.png"/>
                 <div class="caption">Telegram</div>
             </a>
@@ -69,7 +69,7 @@
                 <a href="https://github.com/xhrvan">
                 <img alt="GitHub" src="https://img.icons8.com/nolan/144/github.png"/>
                 </a>
-                <a href="https://telegram.me/xhrvan">
+                <a href="https://telegram.me/xShrvan">
                 <img alt="Telegram" src="https://img.icons8.com/fluent/96/000000/telegram-app.png"/>
                 </a>
                 <a href="https://youtube.com/channel/UC_SKVjYWrDk1Qisyb8R2m6w">
